# Unlimited-OCR

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  infer.py  infer_mac.py  install.sh  prepare_mac_model.py  render_result.py  requirements.txt
.github/workflows/: ci.yml
macos_unlimited_ocr/: .gitignore  README.md  pyproject.toml
macos_unlimited_ocr/docs/: implementation-plan.md
macos_unlimited_ocr/scripts/: make_sample_image.py  setup_venv.sh
macos_unlimited_ocr/src/macos_unlimited_ocr/: __init__.py  cli.py  compat.py  model.py  output.py  runtime.py
macos_unlimited_ocr/tests/: test_cli.py  test_compat.py  test_model.py  test_output.py  test_runtime.py  test_setup_script.py
tests/: __init__.py  conftest.py  test_infer.py
